cmake_minimum_required(VERSION 3.10)

project(CPlusPlusLearning)

set(CMAKE_CXX_STANDARD 11)

include_directories(include)

set (headers
include/TreeNode.h
include/ListNode.h
include/Solution001.hpp
include/Solution002.hpp
include/Solution003.hpp
include/Solution004.hpp
include/Solution005.hpp
include/Solution006.hpp
include/Solution007.hpp
include/Solution008.hpp
include/Solution009.hpp
include/Solution010.hpp
include/Solution011.hpp
include/Solution012.hpp
include/Solution013.hpp
include/Solution014.hpp
include/Solution015.hpp
include/Solution016.hpp
include/Solution017.hpp
include/Solution018.hpp
include/Solution019.hpp
include/Solution020.hpp
include/Solution021.hpp
include/Solution022.hpp
include/Solution023.hpp
include/Solution024.hpp
include/Solution025.hpp
include/Solution026.hpp
include/Solution027.hpp
include/Solution028.hpp
include/Solution029.hpp
include/Solution030.hpp
include/Solution031.hpp
include/Solution032.hpp
include/Solution033.hpp
include/Solution034.hpp
include/Solution035.hpp
include/Solution036.hpp
include/Solution037.hpp
include/Solution038.hpp
include/Solution039.hpp
include/Solution040.hpp
include/Solution041.hpp
include/Solution042.hpp
include/Solution043.hpp
include/Solution044.hpp
include/Solution045.hpp
include/Solution046.hpp
include/Solution047.hpp
include/Solution048.hpp
include/Solution049.hpp
include/Solution050.hpp
include/Solution051.hpp
include/Solution052.hpp
include/Solution053.hpp
include/Solution054.hpp
include/Solution055.hpp
include/Solution056.hpp
include/Solution057.hpp
include/Solution058.hpp
include/Solution059.hpp
include/Solution060.hpp
include/Solution061.hpp
include/Solution062.hpp
)

set (sources 
Solution001.cpp
Solution002.cpp
Solution003.cpp
Solution004.cpp
Solution005.cpp
Solution006.cpp
Solution007.cpp
Solution008.cpp
Solution009.cpp
Solution010.cpp
Solution011.cpp
Solution012.cpp
Solution013.cpp
Solution014.cpp
Solution015.cpp
Solution016.cpp
Solution017.cpp
Solution018.cpp
Solution019.cpp
Solution020.cpp
Solution021.cpp
Solution022.cpp
Solution023.cpp
Solution024.cpp
Solution025.cpp
Solution026.cpp
Solution027.cpp
Solution028.cpp
Solution029.cpp
Solution030.cpp
Solution031.cpp
Solution032.cpp
Solution033.cpp
Solution034.cpp
Solution035.cpp
Solution036.cpp
Solution037.cpp
Solution038.cpp
Solution039.cpp
Solution040.cpp
Solution041.cpp
Solution042.cpp
Solution043.cpp
Solution044.cpp
Solution045.cpp
Solution046.cpp
Solution047.cpp
Solution048.cpp
Solution049.cpp
Solution050.cpp
Solution051.cpp
Solution052.cpp
Solution053.cpp
Solution054.cpp
Solution055.cpp
Solution056.cpp
Solution057.cpp
Solution058.cpp
Solution059.cpp
Solution060.cpp
Solution061.cpp
Solution062.cpp
)

add_executable(${PROJECT_NAME} CPlusPlusLearning.cpp ${headers} ${sources})
