cmake_minimum_required(VERSION 3.10)

project(CPlusPlusLearning)

set(CMAKE_CXX_STANDARD 11)

include_directories(include)

set (headers
)

set (sources 
Solution001.cpp
Solution002.cpp
Solution003.cpp
Solution004.cpp
Solution005.cpp
Solution006.cpp
Solution007.cpp
Solution008.cpp
Solution009.cpp
Solution010.cpp
Solution011.cpp
Solution012.cpp
Solution013.cpp
Solution014.cpp
Solution015.cpp
Solution016.cpp
Solution017.cpp
Solution018.cpp
Solution019.cpp
Solution020.cpp
Solution021.cpp
Solution022.cpp
Solution023.cpp
Solution024.cpp
Solution025.cpp
Solution026.cpp
Solution027.cpp
Solution028.cpp
Solution029.cpp
Solution030.cpp
Solution031.cpp
Solution032.cpp
Solution033.cpp
Solution034.cpp
Solution035.cpp
Solution036.cpp
Solution037.cpp
Solution038.cpp
Solution039.cpp
Solution040.cpp
Solution041.cpp
Solution042.cpp
Solution043.cpp
Solution044.cpp
Solution045.cpp
Solution046.cpp
Solution047.cpp
Solution048.cpp
Solution049.cpp
Solution050.cpp
Solution051.cpp
Solution052.cpp
Solution053.cpp
Solution054.cpp
Solution055.cpp
Solution056.cpp
Solution057.cpp
Solution058.cpp
Solution059.cpp
Solution060.cpp
Solution061.cpp
Solution062.cpp
Solution063.cpp
Solution064.cpp
Solution065.cpp
Solution066.cpp
Solution067.cpp
)

add_executable(${PROJECT_NAME} CPlusPlusLearning.cpp ${headers} ${sources})
